Them chuc nang kiem tra input khi nhap diem

--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/bangDiemView.fxml
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/bangDiemView.fxml
@@ -24,22 +24,22 @@
             <columnConstraints>
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="30.0" prefWidth="0.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="304.0" minWidth="40.0" prefWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="30.0" prefWidth="0.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="330.0" minWidth="40.0" prefWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="30.0" prefWidth="0.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="40.0" prefWidth="0.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="100.0" minWidth="100.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="80.0" prefWidth="80.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="30.0" prefWidth="43.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="463.0" minWidth="40.0" prefWidth="42.0" />
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="80.0" minWidth="0.0" prefWidth="10.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="0.0" prefWidth="84.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="0.0" prefWidth="30.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="77.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="91.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="51.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="187.0" minWidth="0.0" prefWidth="79.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="0.0" prefWidth="23.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="79.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="101.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="251.0" minWidth="10.0" prefWidth="26.0" />
             </columnConstraints>
             <rowConstraints>
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
@@ -47,27 +47,27 @@
                 <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <Label text="Ngữ Văn" GridPane.columnIndex="1">
+                <Label fx:id="diemNguVanHopLe" text="Ngữ Văn" GridPane.columnIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Vật lí" GridPane.columnIndex="1" GridPane.rowIndex="2">
+                <Label fx:id="diemVatLiHopLe" text="Vật lí" GridPane.columnIndex="1" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Toán" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                <Label fx:id="diemToanHopLe" text="Toán" GridPane.columnIndex="1" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Hóa học" GridPane.columnIndex="4">
+                <Label fx:id="diemHoaHocHopLe" text="Hóa học" GridPane.columnIndex="4">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Sinh học" GridPane.columnIndex="4" GridPane.rowIndex="1">
+                <Label fx:id="diemSinhHocHopLe" text="Sinh học" GridPane.columnIndex="4" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
@@ -77,49 +77,49 @@
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Địa lý" GridPane.columnIndex="7">
+                <Label fx:id="diemDiaLyHopLe" text="Địa lý" GridPane.columnIndex="7">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Lịch sử" GridPane.columnIndex="4" GridPane.rowIndex="2">
+                <Label fx:id="diemLichSuHopLe" text="Lịch sử" GridPane.columnIndex="4" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="GDCD" GridPane.columnIndex="7" GridPane.rowIndex="1">
+                <Label fx:id="diemGDCDHopLe" text="GDCD" GridPane.columnIndex="7" GridPane.rowIndex="1">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
+                <Label fx:id="diemNgoaiNguHopLe" text="Ngoại ngữ" GridPane.columnIndex="10" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Tin học" GridPane.columnIndex="10">
+                <Label fx:id="diemTinHocHopLe" text="Tin học" GridPane.columnIndex="10">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <Label text="Công nghệ" GridPane.columnIndex="7" GridPane.rowIndex="2">
+                <Label fx:id="diemCongNgheHopLe" text="Công nghệ" GridPane.columnIndex="7" GridPane.rowIndex="2">
                     <font>
                         <Font size="14.0" />
                     </font>
                 </Label>
-                <TextField fx:id="nguVan_TF" GridPane.columnIndex="2" />
-                <TextField fx:id="toan_TF" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                <TextField fx:id="vatLi_TF" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                <TextField fx:id="hoaHoc_TF" GridPane.columnIndex="5" />
-                <TextField fx:id="sinhHoc_TF" GridPane.columnIndex="5" GridPane.rowIndex="1" />
-                <TextField fx:id="lichSu_TF" GridPane.columnIndex="5" GridPane.rowIndex="2" />
-                <TextField fx:id="diaLy_TF" GridPane.columnIndex="8" />
-                <TextField fx:id="GDCD_TF" GridPane.columnIndex="8" GridPane.rowIndex="1" />
-                <TextField fx:id="ngoaiNgu_TF" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" GridPane.columnIndex="11" GridPane.rowIndex="2" />
-                <TextField fx:id="congNghe_TF" GridPane.columnIndex="8" GridPane.rowIndex="2" />
-                <TextField fx:id="tinHoc_TF" maxWidth="30.0" minWidth="30.0" prefWidth="30.0" GridPane.columnIndex="11" />
+                <TextField fx:id="nguVan_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" />
+                <TextField fx:id="toan_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+                <TextField fx:id="vatLi_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="2" GridPane.rowIndex="2" />
+                <TextField fx:id="hoaHoc_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" />
+                <TextField fx:id="sinhHoc_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="1" />
+                <TextField fx:id="lichSu_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+                <TextField fx:id="diaLy_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" />
+                <TextField fx:id="GDCD_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="1" />
+                <TextField fx:id="ngoaiNgu_TF" maxWidth="30.0" minWidth="40.0" prefWidth="30.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="11" GridPane.rowIndex="2" />
+                <TextField fx:id="congNghe_TF" minWidth="40.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="8" GridPane.rowIndex="2" />
+                <TextField fx:id="tinHoc_TF" maxWidth="30.0" minWidth="40.0" prefWidth="30.0" onKeyReleased="#handleKeyReleased" GridPane.columnIndex="11" />
                 <ComboBox fx:id="maNN_CB" prefWidth="150.0" promptText="Mã NN" GridPane.columnIndex="13" GridPane.rowIndex="2" />
-                <ComboBox fx:id="hanhKiem_CB" prefWidth="150.0" GridPane.columnIndex="16" />
+                <ComboBox fx:id="hanhKiem_CB" prefWidth="150.0" promptText="Hạnh kiểm" GridPane.columnIndex="16" />
                 <Label prefHeight="17.0" prefWidth="79.0" text="Hạnh kiểm" GridPane.columnIndex="15">
                    <font>
                       <Font size="14.0" />
