--- a/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/styles.css
+++ b/CuoiKyOOP/QLHS/src/main/resources/com/qlhs/qlhs/styles.css
@@ -172,7 +172,7 @@ RadioButton {
     -fx-text-fill: white;
 }
 
-#maHS_Lb{
+#maHSTT_Lb{
     -fx-background-color: #3c3c3c;
     -fx-padding: 6px;
 
